# interview-botify

./: .flake8  .mypy.ini  Makefile  README.md  pyproject.toml
src/: __init__.py  func.py
tests/units/: test_example.py
